# mindupload-sdk-python

./: LICENSE  README.md  pyproject.toml
mindupload/: __init__.py  _client.py  _errors.py  _operations.py
tests/: test_client.py
